--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -554,7 +554,7 @@ svg[data-icon="success-circle"] {
 #app-mount > .app-layer {
     padding-top: 22px;
     flex-direction: column;
-    transition: all 0.35s cubic-bezier(0.34, 1.56, 0.64, 1);
+    transition: all 0.35s cubic-bezier(0.35, 1.4, 0.5, 1);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -566,23 +566,103 @@ svg[data-icon="success-circle"] {
 #app-mount > .app-layer {
     opacity: 0;
     visibility: hidden;
-    transform: scale(0.7);
+    transform: scale(0.9);
 }
 
 #app-mount #frameMain {
     opacity: 0;
     visibility: hidden;
-    transform: scale(0.7);
+    transform: scale(0.9);
 }
 
 #app-mount #frameSecond {
     opacity: 0;
     visibility: hidden;
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 #app-mount > .active {
     opacity: 1 !important;
     visibility: visible !important;
     transform: none !important;
+}
+
+
+/* =============== SideBar View =============== */
+
+.sidebarView {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+}
+
+.sidebarView .sidebar-region {
+    background-color: #292929;
+    flex: 1 0 220px;
+    display: flex;
+    justify-content: flex-end;
+    user-select: none;
+}
+
+.sidebar-region .sidebar {
+    width: 220px;
+    padding: 60px 6px 60px 20px;
+}
+
+.sidebar .item{
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    flex-shrink: 0;
+    font-weight: 500;
+}
+
+.sidebar .item-suchka {
+    transition: 0.2s all;
+    padding: 6px 10px;
+    position: relative;
+    font-size: 16px;
+    line-height: 20px;
+    cursor: pointer;
+    background-color: #292929;
+    color: #b9bbbe;
+}
+
+.sidebar .item-suchka:hover {
+    color: #dcddde;
+    background-color: #333333a0;
+}
+
+.sidebar .item-suchka.selected {
+    cursor: default;
+    color: #F1F1F1 !important;
+    background-color: #333333 !important;
+}
+
+.sidebar .header {
+    padding: 6px 10px;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+}
+
+.sidebarView .content-region {
+    background: #333333;
+    flex: 1 0 800px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.content-region .content {
+    position: relative;
+    padding: 60px 40px 80px;
+    flex: 1 1 auto;
+    max-width: 800px;
+    min-width: 512px;
 }
