--- a/app/app.ejs
+++ b/app/app.ejs
@@ -40,9 +40,7 @@
                 <button id="playButton">Играть</button>
             </div>
         </div>
-        <div id="frameSecond" class="app-layer active">
-            <%- include('settings') %>
-        </div>
-    </div>    
+        <div id="frameSecond" class="app-layer"></div>
+    </div>
 </body>
 </html>
