--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -2,14 +2,34 @@
     <div class="sidebar-region">
         <div class="sidebar">
             <div class="item header">Настройки пользователя</div>
-            <div class="item item-suchka">Моя учётная записька</div>
-            <div class="item item-suchka">Конфидицеальность</div>
-            <div class="item item-suchka">Авторизованные приложения</div>
-            <div class="item item-suchka selected">Интеграции</div>
-            <div class="item item-suchka">Выставление счетов</div>
+            <div class="item settingsItem" rTi="my-account-tab">Моя учётная запись</div>
+            <div class="item settingsItem" rTi="privacy-tab">Конфидицеальность</div>
+            <div class="item settingsItem" rTi="auth-app-tab">Авторизованные приложения</div>
+            <div class="item settingsItem" rTi="integrations-tab">Интеграции</div>
+            <div class="item settingsItem" rTi="billing-tab">Выставление счетов</div>
         </div>
     </div>
     <div class="content-region">
-        <div class="content">Vestibulum eu eros in sem imperdiet cursus ac a erat. Vestibulum nec est a tortor viverra varius. Donec dapibus est eu fringilla ullamcorper. Proin tristique congue justo ut fermentum. In quis condimentum turpis. Ut aliquam auctor tristique. Donec eleifend nunc eu odio aliquet pulvinar. Sed pellentesque leo eget nulla fringilla feugiat. In molestie eu elit sit amet imperdiet. Aliquam erat volutpat. Nam hendrerit finibus risus, eget tempus elit posuere ac. Phasellus consectetur lobortis sodales. In congue lorem non magna maximus condimentum. Morbi gravida consequat dolor, eget pellentesque nisl consequat vitae. Aenean vel augue sem. Aenean eget pharetra risus.</div>
+        <div class="transitionWrap">
+            <div class="content">
+                <div id="my-account-tab" class="tab hidden">
+                    <h3>Моя учётная запись</h3>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit massa non posuere placerat. In accumsan ac ante eu tempor. Sed gravida leo leo, at placerat dolor posuere ac. Aenean aliquam non lectus sit amet rutrum. Phasellus suscipit est tincidunt ligula pharetra, sed iaculis metus ultrices. Vestibulum fermentum maximus sapien. Morbi sit amet finibus dui. Sed eget tellus semper magna accumsan posuere congue in enim. Quisque commodo porta risus a tristique.
+                    
+                    Proin fermentum purus sit amet congue placerat. Maecenas sed mattis eros. Sed vel lacus sit amet dolor lacinia cursus. Quisque elementum dui id tellus cursus tincidunt. In posuere risus sed tincidunt tincidunt. Duis vitae diam scelerisque, aliquet urna et, aliquam mi. Mauris sed convallis tellus, sit amet laoreet ipsum. Curabitur pellentesque dolor urna, eu ultricies dolor egestas eu. Vestibulum non tincidunt ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas aliquet aliquam metus, vitae euismod eros finibus et. Nam auctor, felis non varius scelerisque, elit elit tincidunt eros, nec faucibus dui ipsum quis mauris.
+                    
+                    Nunc ante leo, congue nec magna at, porttitor maximus orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam sed mi tempor, porta libero quis, ornare sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer mauris quam, elementum nec lacinia at, aliquet in purus. Nunc luctus, leo vitae fermentum vulputate, risus arcu porttitor urna, euismod laoreet odio magna eu metus. Praesent eget lorem sit amet libero maximus posuere. Vivamus sed odio ac elit tempus consectetur vitae quis nisl. Pellentesque quis quam convallis, suscipit dolor eget, ullamcorper turpis. Maecenas elementum leo porta arcu consequat, eget vulputate erat maximus. Morbi cursus feugiat orci et varius. Nunc dictum velit ut enim viverra iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus est tortor, condimentum ac lacus vitae, finibus semper urna. Cras accumsan nulla ac nulla tempor, sed pulvinar velit semper. Aliquam malesuada libero et gravida eleifend.
+                    
+                    Etiam dapibus odio id volutpat feugiat. Vivamus eget dapibus libero. Fusce eget risus eget diam volutpat ultrices. Integer iaculis tincidunt ex, non interdum sem ornare vitae. Praesent quis mauris vitae nulla dictum lobortis. Morbi sit amet nisl vel ante placerat posuere nec volutpat elit. Mauris bibendum, turpis id lacinia elementum, diam odio consequat justo, sed vehicula erat tellus at nisi. In magna tellus, finibus sed sapien sed, pharetra lobortis mi. Cras at venenatis quam. Curabitur ut risus nisl.
+                    
+                    Vestibulum et arcu quis risus pellentesque faucibus ac a diam. Proin ac risus eu neque sodales sodales eleifend ut lorem. Nunc orci neque, volutpat ut maximus eget, ornare eget est. In vel ullamcorper est, ac blandit arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sit amet leo aliquam neque gravida varius. Maecenas non nunc et nibh porta placerat sed non urna. Donec malesuada porttitor justo non consectetur.
+                </div>
+                <div id="privacy-tab" class="tab hidden">
+                    <h3>Приватность</h3>
+                </div>
+                
+            </div>
+        </div>
     </div>
 </div>
+<!--<script src="./assets/js/settings.js"></script>-->
