some fixes with animations

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -27,7 +27,7 @@
         <img src="./assets/images/icon.png">
     </div>
     <div id="app-mount">
-        <div id="frameMain" class="app-layer">
+        <div id="frameMain" class="app-layer frame-fix">
             <div id="topBar" class="hidden">
                 <div id="progress-bar"></div>
             </div>
@@ -40,7 +40,7 @@
                 <button id="playButton">Играть</button>
             </div>
         </div>
-        <div id="frameSecond" class="app-layer"></div>
+        <div id="frameSecond" class="app-layer frame-fix"></div>
     </div>
 </body>
 </html>
