--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -42,6 +42,8 @@
     transition: none !important;
 }
 .hidden {visibility: hidden; opacity: 0;display: none;}
+.frame-fix {padding-top: 22px;}
+.fullscreen .frame-fix {padding-top: 0;}
 
 div {transition: 0.5s all;}
 html, body {
@@ -283,6 +285,7 @@ body, button {
     visibility: hidden;
 }
 
+
 #main {
     flex: 1;
     overflow: auto;
@@ -399,7 +402,7 @@ body, button {
 .tools {
     transition: all 0.5s ease;
     position: fixed;
-    top: 22px;
+    top: 0px;
     right: 0;
     margin: 16px;
     display: flex;
@@ -552,7 +555,6 @@ svg[data-icon="success-circle"] {
 }
 
 #app-mount > .app-layer {
-    padding-top: 22px;
     flex-direction: column;
     transition: all 0.35s cubic-bezier(0.35, 1.4, 0.5, 1);
     position: absolute;
@@ -576,7 +578,6 @@ svg[data-icon="success-circle"] {
 }
 
 #app-mount #frameSecond {
-    margin-top: 22px;
     opacity: 0;
     visibility: hidden;
     transform: scale(1.1);
@@ -599,7 +600,6 @@ svg[data-icon="success-circle"] {
     bottom: 0;
     right: 0;
     left: 0;
-
 }
 
 .sidebarView .sidebar-region {
@@ -703,11 +703,4 @@ svg[data-icon="success-circle"] {
     max-width: 800px;
     min-width: 512px;
     min-height: 100%;
-}
-
-.content::-webkit-scrollbar-thumb {
-    background-color: transparent;
-}
-.content:hover::-webkit-scrollbar-thumb {
-    background-color: rgb(170, 170, 170, 0.7);
 }
