--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -1,5 +1,5 @@
 <div class="sidebarView">
-    <div class="sidebar-region">
+    <div class="sidebar-region frame-fix">
         <div class="sidebar">
             <div class="item header">Настройки пользователя</div>
             <div class="item settingsItem" rTi="my-account-tab">Моя учётная запись</div>
@@ -30,7 +30,7 @@
             <div class="item settingsItem" rTi="billing-tab">Выставление счетов</div>
         </div>
     </div>
-    <div class="content-region">
+    <div class="content-region frame-fix">
         <div class="transitionWrap">
             <div class="content">
                 <div id="my-account-tab" class="tab hidden">
