--- a/app/app.ejs
+++ b/app/app.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
     <script src="./assets/js/uicore.js"></script>
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
     <style>
@@ -40,7 +40,9 @@
                 <button id="playButton">Играть</button>
             </div>
         </div>
-        <div id="frameSecond" class="app-layer frame-fix"></div>
+        <div id="frameSecond" class="app-layer frame-fix">
+            
+        </div>
     </div>
 </body>
 </html>
