--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -43,6 +43,7 @@
 }
 .hidden {visibility: hidden; opacity: 0;display: none;}
 .frame-fix {padding-top: 22px;}
+.darwin .frame-fix {padding-top: 0;}
 .fullscreen .frame-fix {padding-top: 0;}
 
 div {transition: 0.5s all;}
@@ -114,25 +115,6 @@ body, button {
     justify-content: space-between;
 }
 
-#frameBar #frameContentDarwin {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    -webkit-app-region: drag;
-}
-
-#frameBar #frameContentDarwin #frameTitleDock {
-    position: absolute;
-    text-align: center;
-    justify-self: center;
-    align-self: center;
-    display: block;
-    left: 0;
-    right: 0;
-    z-index: -1;
-}
-
 #frameBar #frameTitleDock {
     padding: 0 10px;
     display: flex;
@@ -154,12 +136,6 @@ body, button {
     margin-left: -4px;
 }
 
-#frameBar #frameButtonDockDarwin {
-    -webkit-app-region: no-drag !important;
-    position: relative;
-    top: -1px;
-    right: -1px;
-}
 
 #frameBar .frameButton {
     background: none;
@@ -186,50 +162,6 @@ body, button {
 }
 #frameBar #frameButton_close:active {
     background: rgba(235, 0, 0, 0.61) !important;
-}
-
-
-#frameBar .frameButtonDarwin {
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    border: 0px;
-    margin-left: 5px;
-    -webkit-app-region: no-drag !important;
-    cursor: pointer;
-}
-#frameBar .frameButtonDarwin:focus {
-    outline: 0px;
-}
-
-#frameBar #frameButtonDarwin_close {
-    background-color: #e74c32;
-}
-#frameBar #frameButtonDarwin_close:hover {
-    background-color: #FF9A8A;
-}
-#frameBar #frameButtonDarwin_close:active {
-    background-color: #ff8d7b;
-}
-
-#frameBar #frameButtonDarwin_minimize {
-    background-color: #fed045;
-}
-#frameBar #frameButtonDarwin_minimize:hover {
-    background-color: #FFE9A9;
-}
-#frameBar #frameButtonDarwin_minimize:active {
-    background-color: #ffde7b;
-}
-
-#frameBar #frameButtonDarwin_restoredown {
-    background-color: #96e734;
-}
-#frameBar #frameButtonDarwin_restoredown:hover {
-    background-color: #D6FFA6;
-}
-#frameBar #frameButtonDarwin_restoredown:active {
-    background-color: #bfff76;
 }
 
 /* =============================================== */
