--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -42,8 +42,8 @@
     transition: none !important;
 }
 .hidden {visibility: hidden; opacity: 0;display: none;}
-.frame-fix {padding-top: 22px;}
 .darwin .frame-fix {padding-top: 0;}
+.frame-fix {padding-top: 22px;}
 .fullscreen .frame-fix {padding-top: 0;}
 
 div {transition: 0.5s all;}
@@ -115,6 +115,25 @@ body, button {
     justify-content: space-between;
 }
 
+#frameBar #frameContentDarwin {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    -webkit-app-region: drag;
+}
+
+#frameBar #frameContentDarwin #frameTitleDock {
+    position: absolute;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+    display: block;
+    left: 0;
+    right: 0;
+    z-index: -1;
+}
+
 #frameBar #frameTitleDock {
     padding: 0 10px;
     display: flex;
@@ -136,6 +155,16 @@ body, button {
     margin-left: -4px;
 }
 
+#frameBar #frameButtonDockDarwin {
+    -webkit-app-region: no-drag !important;
+    position: relative;
+    top: 0;
+    right: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 #frameBar .frameButton {
     background: none;
@@ -163,6 +192,7 @@ body, button {
 #frameBar #frameButton_close:active {
     background: rgba(235, 0, 0, 0.61) !important;
 }
+
 
 /* =============================================== */
 
