some core fixes

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -40,9 +40,7 @@
                 <button id="playButton">Играть</button>
             </div>
         </div>
-        <div id="frameSecond" class="app-layer frame-fix">
-            
-        </div>
+        <div id="frameSecond" class="app-layer frame-fix"></div>
     </div>
 </body>
 </html>
