--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -566,6 +566,7 @@ svg[data-icon="success-circle"] {
 }
 
 .sidebar .settingsItem {
+    border-radius: 2px;
     transition: 0.2s all;
     padding: 6px 10px;
     position: relative;
@@ -595,7 +596,7 @@ svg[data-icon="success-circle"] {
     text-transform: uppercase;
 }
 
-.sidebar .separator {
+.separator {
     margin: 8px 10px;
     height: 1px;
     background-color: #ffffff0f;
@@ -635,4 +636,67 @@ svg[data-icon="success-circle"] {
     max-width: 800px;
     min-width: 512px;
     min-height: 100%;
+}
+
+.content .field {
+    position: relative;
+}
+
+.content .separator {
+    margin: 40px 0;
+}
+
+.content .FieldContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.content .FieldContainer .Field {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Toggle Switch */
+.toggleSwitch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 28px;
+    border-radius: 50px;
+    box-sizing: border-box;
+}
+.toggleSwitch input {
+    display:none;
+}
+.toggleSwitchSlider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.35);
+    transition: .4s;
+    border-radius: 50px;
+    border: 1px solid rgba(126, 126, 126, 0.57);
+}
+.toggleSwitchSlider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 50px;
+    transition: .3s;
+}
+input:checked + .toggleSwitchSlider {
+    background-color: rgb(31, 140, 11);
+    border: 1px solid rgb(31, 140, 11);
+}
+input:checked + .toggleSwitchSlider:before {
+    transform: translateX(22px);
 }
