--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -2,12 +2,16 @@
     <div class="sidebar-region frame-fix">
         <div class="sidebar">
             <div class="item header">Настройки пользователя</div>
-            <div class="item settingsItem" rTi="my-account-tab">Моя учётная запись</div>
-            <div class="item settingsItem" rTi="privacy-tab">Конфидицеальность</div>
-            <div class="item settingsItem" rTi="auth-app-tab">Авторизованные приложения</div>
-            <div class="item settingsItem" rTi="integrations-tab">Интеграции</div>
-            <div class="item settingsItem" rTi="billing-tab">Выставление счетов</div>
-            <div class="item separator"></div>
+                <div class="item settingsItem" rTi="my-account-tab">Моя учётная запись</div>
+                <div class="item settingsItem" rTi="skin-tab">Сменить скин</div>
+        <div class="item separator"></div>
+            <div class="item header">Настройки Игры</div>
+                <div class="item settingsItem" rTi="minecraft-settings">Игровые настройки</div>
+                <div class="item settingsItem" rTi="java-settings">Настройки Java</div>
+        <div class="item separator"></div>
+                <div class="item settingsItem" rTi="launcher-settings">Настройки Лаунчера</div>
+        <div class="item separator"></div>
+                <div class="item settingsItem" rTi="about-tab">О нас</div>
         </div>
     </div>
     <div class="content-region frame-fix">
@@ -15,26 +19,39 @@
             <div class="content">
                 <div id="my-account-tab" class="tab hidden">
                     <h3>Моя учётная запись</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit massa non posuere placerat. In accumsan ac ante eu tempor. Sed gravida leo leo, at placerat dolor posuere ac. Aenean aliquam non lectus sit amet rutrum. Phasellus suscipit est tincidunt ligula pharetra, sed iaculis metus ultrices. Vestibulum fermentum maximus sapien. Morbi sit amet finibus dui. Sed eget tellus semper magna accumsan posuere congue in enim. Quisque commodo porta risus a tristique.</p>
-                    
-                    <p>Proin fermentum purus sit amet congue placerat. Maecenas sed mattis eros. Sed vel lacus sit amet dolor lacinia cursus. Quisque elementum dui id tellus cursus tincidunt. In posuere risus sed tincidunt tincidunt. Duis vitae diam scelerisque, aliquet urna et, aliquam mi. Mauris sed convallis tellus, sit amet laoreet ipsum. Curabitur pellentesque dolor urna, eu ultricies dolor egestas eu. Vestibulum non tincidunt ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas aliquet aliquam metus, vitae euismod eros finibus et. Nam auctor, felis non varius scelerisque, elit elit tincidunt eros, nec faucibus dui ipsum quis mauris.</p>
-                    
-                    <p>Nunc ante leo, congue nec magna at, porttitor maximus orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam sed mi tempor, porta libero quis, ornare sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer mauris quam, elementum nec lacinia at, aliquet in purus. Nunc luctus, leo vitae fermentum vulputate, risus arcu porttitor urna, euismod laoreet odio magna eu metus. Praesent eget lorem sit amet libero maximus posuere. Vivamus sed odio ac elit tempus consectetur vitae quis nisl. Pellentesque quis quam convallis, suscipit dolor eget, ullamcorper turpis. Maecenas elementum leo porta arcu consequat, eget vulputate erat maximus. Morbi cursus feugiat orci et varius. Nunc dictum velit ut enim viverra iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus est tortor, condimentum ac lacus vitae, finibus semper urna. Cras accumsan nulla ac nulla tempor, sed pulvinar velit semper. Aliquam malesuada libero et gravida eleifend.</p>
-                    
-                    <p>Etiam dapibus odio id volutpat feugiat. Vivamus eget dapibus libero. Fusce eget risus eget diam volutpat ultrices. Integer iaculis tincidunt ex, non interdum sem ornare vitae. Praesent quis mauris vitae nulla dictum lobortis. Morbi sit amet nisl vel ante placerat posuere nec volutpat elit. Mauris bibendum, turpis id lacinia elementum, diam odio consequat justo, sed vehicula erat tellus at nisi. In magna tellus, finibus sed sapien sed, pharetra lobortis mi. Cras at venenatis quam. Curabitur ut risus nisl.</p>
-                    
-                    <p>Vestibulum et arcu quis risus pellentesque faucibus ac a diam. Proin ac risus eu neque sodales sodales eleifend ut lorem. Nunc orci neque, volutpat ut maximus eget, ornare eget est. In vel ullamcorper est, ac blandit arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sit amet leo aliquam neque gravida varius. Maecenas non nunc et nibh porta placerat sed non urna. Donec malesuada porttitor justo non consectetur.</p>
                 </div>
-                <div id="privacy-tab" class="tab hidden">
-                    <h3>Конфидецеальность</h3>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit massa non posuere placerat. In accumsan ac ante eu tempor. Sed gravida leo leo, at placerat dolor posuere ac. Aenean aliquam non lectus sit amet rutrum. Phasellus suscipit est tincidunt ligula pharetra, sed iaculis metus ultrices. Vestibulum fermentum maximus sapien. Morbi sit amet finibus dui. Sed eget tellus semper magna accumsan posuere congue in enim. Quisque commodo porta risus a tristique.
-                    
-                    Proin fermentum purus sit amet congue placerat. Maecenas sed mattis eros. Sed vel lacus sit amet dolor lacinia cursus. Quisque elementum dui id tellus cursus tincidunt. In posuere risus sed tincidunt tincidunt. Duis vitae diam scelerisque, aliquet urna et, aliquam mi. Mauris sed convallis tellus, sit amet laoreet ipsum. Curabitur pellentesque dolor urna, eu ultricies dolor egestas eu. Vestibulum non tincidunt ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas aliquet aliquam metus, vitae euismod eros finibus et. Nam auctor, felis non varius scelerisque, elit elit tincidunt eros, nec faucibus dui ipsum quis mauris.
-                    
-                    Nunc ante leo, congue nec magna at, porttitor maximus orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam sed mi tempor, porta libero quis, ornare sem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer mauris quam, elementum nec lacinia at, aliquet in purus. Nunc luctus, leo vitae fermentum vulputate, risus arcu porttitor urna, euismod laoreet odio magna eu metus. Praesent eget lorem sit amet libero maximus posuere. Vivamus sed odio ac elit tempus consectetur vitae quis nisl. Pellentesque quis quam convallis, suscipit dolor eget, ullamcorper turpis. Maecenas elementum leo porta arcu consequat, eget vulputate erat maximus. Morbi cursus feugiat orci et varius. Nunc dictum velit ut enim viverra iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus est tortor, condimentum ac lacus vitae, finibus semper urna. Cras accumsan nulla ac nulla tempor, sed pulvinar velit semper. Aliquam malesuada libero et gravida eleifend.
-                    
-                    Etiam dapibus odio id volutpat feugiat. Vivamus eget dapibus libero. Fusce eget risus eget diam volutpat ultrices. Integer iaculis tincidunt ex, non interdum sem ornare vitae. Praesent quis mauris vitae nulla dictum lobortis. Morbi sit amet nisl vel ante placerat posuere nec volutpat elit. Mauris bibendum, turpis id lacinia elementum, diam odio consequat justo, sed vehicula erat tellus at nisi. In magna tellus, finibus sed sapien sed, pharetra lobortis mi. Cras at venenatis quam. Curabitur ut risus nisl.
-                    
+                <div id="skin-tab" class="tab hidden">
+                    <h3>Конфигурация скина</h3>
+                </div>
+                <div id="minecraft-settings" class="tab hidden">
+                    <div class="field">
+                        <h3>Настройки Minecraft</h3>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet diam vel nunc aliquet molestie. Nullam tincidunt sapien lacus, eget mattis lorem volutpat a. Aliquam blandit vehicula ultricies. Proin eget diam vitae elit fermentum laoreet quis sed justo. Donec eget mi bibendum, cursus lectus in, molestie est. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed aliquet mauris ut enim cursus, ut hendrerit turpis semper. Pellentesque tempor est lacus. Donec accumsan est a sem scelerisque, quis mattis ex ornare. Sed vitae erat eget augue dictum molestie a sit amet metus. Donec et ex nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque vehicula sit amet tortor non volutpat. Cras euismod tincidunt eros, nec porttitor metus fringilla vitae. In sodales mauris massa, quis faucibus est mollis ut.
+                    </div>
+                    <div class="separator"></div>
+                    <div class="field">
+                        <div class="FieldContainer">
+                            <div class="Field Left">
+                                <span>Some Text</span>
+                            </div>
+                            <div class="Field Right">
+                                <label class="toggleSwitch">
+                                    <input type="checkbox" cValue="Fullscreen">
+                                    <span class="toggleSwitchSlider"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="java-settings" class="tab hidden">
+                    <h3>Настройки Java</h3>
+                </div>
+                <div id="launcher-settings" class="tab hidden">
+                    <h3>Настройки Лаунчера</h3>
+                </div>
+                <div id="about-tab" class="tab hidden">
+                    <h3>О нас</h3>
+                    <h5>Просмотр информации о текущем релизе и заметки к выпуску</h5>
                 </div>
             </div>
         </div>
