some core fixes and assets manager

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -40,6 +40,7 @@
                                     <span class="toggleSwitchSlider"></span>
                                 </label>
                             </div>
+                            <a href="http://tjmcraft.ga/">See more..</a>
                         </div>
                     </div>
                 </div>
