--- a/app/app.ejs
+++ b/app/app.ejs
@@ -3,22 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>TJMC-Launcher</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';">
-    <script src="./assets/js/uicore.js"></script>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+    <!--<script src="./assets/js/uicore.js"></script>-->
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
-    <style>
-        #frameMain {
-            background: url('https://picsum.photos/1280/720');
-            background-size: cover;
-            -webkit-user-select: none;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-        }
-        #frameSecond {
-            background: #212121;
-        }
-    </style>
 </head>
 <body class="preload">
     <%- include('frame') %>
