--- a/app/app.ejs
+++ b/app/app.ejs
@@ -29,5 +29,7 @@
         </div>
         <div id="frameSecond" class="app-layer frame-fix"></div>
     </div>
+    <script src="./assets/js/libs/Animation.js"></script>
+    <script src="./assets/js/scripts/renderer.js"></script>
 </body>
 </html>
