some ui fixes + layers

--- a/app/app.ejs
+++ b/app/app.ejs
@@ -27,7 +27,9 @@
                 <button id="playButton">Играть</button>
             </div>
         </div>
-        <div id="frameSecond" class="app-layer frame-fix"></div>
+        <div id="frameSecond" class="app-layer frame-fix">
+            <%- include('settings') %> 
+        </div>
     </div>
     <script src="./assets/js/libs/Animation.js"></script>
     <script src="./assets/js/scripts/renderer.js"></script>
