--- a/app/main.ejs
+++ b/app/main.ejs
@@ -4,3 +4,8 @@
     Chrome <script>document.write(process.versions.chrome)</script>,
     и Electron <script>document.write(process.versions.electron)</script>.
 </p>-->
+<nav class="guilds">
+    <ul>
+        хуй
+    </ul>
+</nav>
