--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -693,3 +693,23 @@ input:checked + .toggleSwitchSlider:before {
 #frameSecond {
     background: #212121;
 }
+
+/* === Main === */
+.guilds {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 72px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    background-color: #202225;
+}
