--- a/app/main.ejs
+++ b/app/main.ejs
@@ -9,3 +9,15 @@
         хуй
     </ul>
 </nav>
+<div id="main">
+    <div id="topBar" class="hidden">
+        <div id="progress-bar"></div>
+    </div>
+    <div id="main">
+    </div>
+    <div id="mainBar">
+        <input type="text" placeholder="Ник" id="nick">
+        <select id="version"></select>
+        <button id="playButton">Играть</button>
+    </div>
+</div>
