--- a/app/app.ejs
+++ b/app/app.ejs
@@ -16,9 +16,7 @@
                     <div class="layer base-layer" id="main-layer">
                         <%- include('main') %>
                     </div>
-                    <div class="layer" id="settings-layer">
-                        <%- include('settings') %>
-                    </div>
+                    <div class="layer" id="settings-layer"></div>
                 </div>
                 <div class="uploadArea">
                     <div class="uploadDropModal"></div>
@@ -26,6 +24,8 @@
             </div>
             <div id="preloader">
                 <img src="./assets/images/icon.png">
+                <div class="circle"></div>
+                <div class="circle" style="animation-delay: .9s !important;"></div>
             </div>
         </div>
         <div class="layerContainer"></div>
