--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -11,13 +11,22 @@
     src: url('candara.ttf');
 }
 
-@keyframes box-shadow-rise {
-    from {
-        box-shadow: 0 0 10px 1px #0039DF;
+@keyframes bounce {
+    0% {
+        transform: scale(1.2);
     }
-    to {
-        box-shadow: 0 0 50px 15px #115FFF;
+    50% {
+        transform: scale(1.3);
     }
+    100% {
+        transform: scale(1.0);
+    }
+}
+
+@keyframes pulsate {
+    0% {transform: scale(0.3, 0.3); opacity: 0.3;}
+    50% {opacity: 0.4;}
+    100% {transform: scale(5.2, 5.2); opacity: 0.0;}
 }
 
 @keyframes fadein {
@@ -45,6 +54,35 @@
 .darwin .frame-fix {padding-top: 0;}
 .frame-fix {transition: all 0.6s; padding-top: 22px;}
 .fullscreen .frame-fix {padding-top: 0;}
+
+div {transition: all 0.6s;}
+html, body {
+    transition: 1s all;
+    overflow: hidden;
+    height: 100%;
+}
+
+body, html, div {
+    margin: 0px;
+    padding: 0px;
+}
+
+body, button {
+    font-family: 'Candara';
+    color: white;
+    background-color: #30303010;
+}
+a, button, div, input, label, select, span, strong, textarea {
+    outline: 0;
+}
+
+a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, dd, del, dfn, div, dl, dt, em, fieldset, form, h1, h2, h3, h4, h5, h6, html, iframe, img, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, table, tbody, td, tfoot, th, thead, tr, tt, ul, var {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
 
 /************* DARK THEME ***************/
 .dark-theme {
@@ -168,17 +206,32 @@
     bottom: 0;
     right: 0;
     left: 0;
+    background-repeat: no-repeat;
     background: #1a1a1a;
 }
 #preloader img {
-    animation: box-shadow-rise 2s infinite alternate ease-in-out !important;
+    /*animation: box-shadow-rise 2s infinite alternate ease-in-out !important;*/
+    animation: bounce 1s ease !important;
     /*box-shadow: 0 0 50px 20px #1122FF;*/
     backface-visibility: hidden;
     border-radius: 50%;
     overflow: hidden;
-    height: 25%;
+    height: 20%;
     padding: 0;
+    z-index: 1;
 }
+.circle {
+    border-radius: 50%;
+    background: radial-gradient(circle, transparent 15%, #115fff 100%);
+    width: 500px;
+    height: 500px;
+    position: absolute;
+    opacity: 0;
+    animation: pulsate 1.5s infinite ease-out !important;
+    animation-delay: .7s !important;
+    z-index: 0;
+}
+
 .big-text {
     font-family: 'Segoe UI Bold';
     font-size: 48px;
@@ -677,6 +730,7 @@ input:checked + .toggleSwitchSlider:before {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 100%;
     width: 72px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -737,10 +791,9 @@ input:checked + .toggleSwitchSlider:before {
     display: flex;
     overflow: hidden;
     flex-direction: column;
+    transition: none;
     opacity: 0;
     visibility: hidden;
-    transform: scale(0.9);
-    transition: none;
 }
 .app-layers > .layer.base-layer {
     background: transparent;
@@ -765,33 +818,4 @@ input:checked + .toggleSwitchSlider:before {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-}
-
-div {transition: all 0.6s;}
-html, body {
-    transition: 1s all;
-    overflow: hidden;
-    height: 100%;
-}
-
-body, html, div {
-    margin: 0px;
-    padding: 0px;
-}
-
-body, button {
-    font-family: 'Candara';
-    color: white;
-    background-color: #30303010;
-}
-a, button, div, input, label, select, span, strong, textarea {
-    outline: 0;
-}
-
-a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, dd, del, dfn, div, dl, dt, em, fieldset, form, h1, h2, h3, h4, h5, h6, html, iframe, img, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, table, tbody, td, tfoot, th, thead, tr, tt, ul, var {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
 }
