--- a/app/main.ejs
+++ b/app/main.ejs
@@ -1,23 +1,27 @@
-<!--<h1>Hello World!</h1>
-<p>
-    Вы используете node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    и Electron <script>document.write(process.versions.electron)</script>.
-</p>-->
-<nav class="guilds">
-    <ul>
-        хуй
-    </ul>
-</nav>
-<div id="main">
-    <div id="topBar" class="hidden">
-        <div id="progress-bar"></div>
-    </div>
+<div class="container">
+    <nav class="guilds">
+        <ul>
+            У тебя хуй во рту застрял
+            Алё, Алё
+            Ничего не слышно
+            Вытащи хуй изо рта
+
+            Алё, Федя блядь
+            Я понимаю что гловка вкусная
+            Но вытащи хуй
+            Я тебя не слышу
+        </ul>
+    </nav>
     <div id="main">
-    </div>
-    <div id="mainBar">
-        <input type="text" placeholder="Ник" id="nick">
-        <select id="version"></select>
-        <button id="playButton">Играть</button>
+        <div id="topBar" class="hidden">
+            <div id="progress-bar"></div>
+        </div>
+        <div id="main">
+        </div>
+        <div id="mainBar">
+            <input type="text" placeholder="Ник" id="nick">
+            <select id="version"></select>
+            <button id="playButton">Играть</button>
+        </div>
     </div>
 </div>
