some layout and css fixes

--- a/app/main.ejs
+++ b/app/main.ejs
@@ -1,6 +1,17 @@
 <div class="container">
     <nav class="guilds">
         <ul>
+            <div class="scrollerBase">
+                <div class="listItem">
+                    <div class="wrapper">1</div>
+                </div>
+                <div class="listItem">
+                    <div class="wrapper">2</div>
+                </div>
+                <div class="listItem">
+                    <div class="wrapper">3</div>
+                </div>
+            </div>
             У тебя хуй во рту застрял
             Алё, Алё
             Ничего не слышно
