--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -102,7 +102,7 @@ a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, d
     justify-content: center;
     flex-direction: column;
     transition: all 0.6s;
-    background-color: #000000ca;
+    background-color: var(--background-tertiary);
     -webkit-user-select: none;
     width: 100%;
     height: 22px;
@@ -739,7 +739,7 @@ input:checked + .toggleSwitchSlider:before {
     flex-direction: column;
     -ms-flex-negative: 0;
     flex-shrink: 0;
-    background-color: #202225;
+    background-color: var(--background-tertiary);
 }
 
 /* === app === */
@@ -823,4 +823,31 @@ input:checked + .toggleSwitchSlider:before {
     width: 100%;
     height: 100%;
     overflow: hidden;
+}
+
+.scrollerBase {
+    position: relative;
+    box-sizing: border-box;
+    min-height: 0;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+.listItem {
+    position: relative;
+    margin: 0 0 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.listItem > .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    width: 48px;
+    height: 48px;
+    position: relative;
+    cursor: pointer;
 }
