--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -2,16 +2,16 @@
     <div class="sidebar-region">
         <div class="sidebar">
             <div class="item header">Настройки пользователя</div>
-                <div class="item settingsItem" rTi="my-account-tab">Моя учётная запись</div>
-                <div class="item settingsItem" rTi="skin-tab">Сменить скин</div>
+                <div class="item navItem" rTi="my-account-tab">Моя учётная запись</div>
+                <div class="item navItem" rTi="skin-tab">Сменить скин</div>
         <div class="item separator"></div>
             <div class="item header">Настройки Игры</div>
-                <div class="item settingsItem" rTi="minecraft-settings">Игровые настройки</div>
-                <div class="item settingsItem" rTi="java-settings">Настройки Java</div>
+                <div class="item navItem" rTi="minecraft-settings">Игровые настройки</div>
+                <div class="item navItem" rTi="java-settings">Настройки Java</div>
         <div class="item separator"></div>
-                <div class="item settingsItem" rTi="launcher-settings">Настройки Лаунчера</div>
+                <div class="item navItem" rTi="launcher-settings">Настройки Лаунчера</div>
         <div class="item separator"></div>
-                <div class="item settingsItem" rTi="about-tab">О нас</div>
+                <div class="item navItem" rTi="about-tab">О нас</div>
         </div>
     </div>
     <div class="content-region">
